// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectAccountPage should render correctly 1`] = `
<Page
  className="connect-account"
  isNarrow={true}
>
  <Card
    className="connect-account__card"
  >
    <_default />
    <h2>
      Accept credit cards online using WooCommerce Payments.
      <br />
      Simply verify your business details to get started.
    </h2>
    <p
      className="connect-account__terms"
    >
      By clicking “Verify details,” you agree to the 
      <a
        href="https://wordpress.com/tos"
      >
        Terms of Service
      </a>
      .
    </p>
    <hr
      className="full-width"
    />
    <p
      className="connect-account__action"
    >
      <ForwardRef(Button)
        href="/wcpay-connect-url"
        isLarge={true}
        isPrimary={true}
      >
        Verify details
      </ForwardRef(Button)>
    </p>
  </Card>
</Page>
`;

exports[`ConnectAccountPage should render correctly when on-boarding disabled 1`] = `
<Page
  className="connect-account"
  isNarrow={true}
>
  <Card
    className="connect-account__card"
  >
    <_default />
    <h2>
      Accept credit cards online using WooCommerce Payments.
      <br />
      Simply verify your business details to get started.
    </h2>
    <p>
      We've temporarily paused new account creation.
      <br />
      We'll notify you when we resume!
    </p>
  </Card>
</Page>
`;
